# python-parquet

./: CMakeLists.txt  README.md
materializing_reader/cpp/: MaterializingFileReader.cpp  PythonSchemaGenerator.cpp
materializing_reader/include/: Delegates.h  MaterializingFileReader.h  PythonSchemaGenerator.h  RecordConverter.h  RecordReader.h
parquet-record-reader/cpp/: MaterializingFileReader.cpp  PrimitiveFieldProcessor.cpp  RecordReader.cpp
parquet-record-reader/include/: Converter.h  Delegates.h  MaterializingFileReader.h  PrimitiveFieldConverter.h  PrimitiveFieldProcessor.h  Processor.h
pyparquet/: _pyparquet.pyx  materializing_reader.pxd  parquet.pxd  parquet_record_reader.pxd  pyparquet.pyx  setup.py
pyparquet/pyparquet/: __init__.py  reader.py  schema.py
